name:            starling
version:         0.4.99.2
stability:       Alpha

synopsis:        A memcached client
description:     A haskell memcached client. See http:\/\/memcached.org
                 for more information.
                 .
                 This implements the new binary protocol,
		 so it only works with memcached version
                 1.3 and newer.
homepage:        http://community.haskell.org/~aslatter/starling

category:        Network

license:         BSD3
license-file:    LICENSE
author:          Antoine Latter <aslatter@gmail.com>
maintainer:      Antoine Latter <aslatter@gmail.com>

build-type:      Simple
cabal-version:   >= 1.8

extra-source-files: CHANGES

source-repository head
 type:     git
 location: https://github.com/drchaos/starling

library
  build-depends:   base == 4.*
                 , binary       >= 0.5 && < 0.7
                 , bytestring   >= 0.9 && < 0.11
                 , transformers >= 0.2 && < 0.4
                 , failure      >= 0.1 && < 0.3
                 , stm          >= 2.2

  exposed-modules:
        Network.Starling
        Network.Starling.Core
        Network.Starling.Connection

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Test.hs
    ghc-options:       -Wall

    build-depends:
        base ,
        network ,
        process ,
        failure ,
        transformers ,
        bytestring ,
        binary ,
        stm ,
        starling ,
        HUnit
